# is-that-a-beaver-hs

./: CHANGELOG.md  LICENSE  README.md  is-that-a-beaver-hs.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
