cabal-version:      2.4
name:               is-that-a-beaver-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Game about guessing wether animal on image is a beaver or not

-- The license under which the package is released.
license: MIT
author:             linuxseller
maintainer:         shibanutyitokom@yandex.ru

-- A copyright notice.
-- copyright: copyleft
category: games
extra-source-files: CHANGELOG.md

executable is-that-a-beaver-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , h-raylib
    hs-source-dirs:   app
    default-language: Haskell2010
